--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,8 @@
+*,*::before, *::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,12 +10,70 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 18px;
+  font-size: 0.781rem;
   height: 100vh;
   width: 100vw;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.navbar {
+  box-shadow: rgba(0, 0, 0, 0.3) 0px 3px 6px;
+}
+.title {
+  margin-top: -33px;
+  font-size: 0.781rem;
+  color: black;
+}
+.toast {
+  border-bottom: 2px solid white;
+  border-left: 2px solid white;
+  border-right: 2px solid white;
+  border-top: 22px solid white;
+  border-radius: 2px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 20px 30px;
+  padding: 6.9px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+select#inputMint, select#outputMint, input#amount {
+  font-size: 0.781rem;
+  max-width: 100%;
+  flex: none;
+}
+
+.panel-container {
+  /* border: 1px solid red; */
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+}
+.panel {
+  /* border: 1px solid red; */
+  display: flex;
+  width: 48%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+div.inputContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+div.navbar-content {
+  display: flex;
+  justify-content: center;
+  align-items: space-evenly;
 }
